improves code quality in java section